@@ -4,8 +4,8 @@ AUX ejabberd-wrapper-3.template 1294 RMD160 0d269272eead33433ea460a36f49f7fc62e7
 AUX ejabberdctl-wrapper-3.template 908 RMD160 c5378d8e089ae1c180b7be76639a99d5cad16f11 SHA1 4ee6996c492360c4e44a05e011fb228eecff56b9 SHA256 c3c377ae8b00143e21ab4ccff7cffe539f6a6b95336aa5636cb8d6bba49c9592
 AUX self-cert-v3.sh 2791 RMD160 23f07e5fdbaf4f946d74b1464396036d94f156ce SHA1 985fca31c76d3b5af39ba1209b317bdd3b6f4101 SHA256 bb3cf52bd4f67732f5b7c418ac61f7741c3cb009faaa109a68c0379338238072
 AUX ssl.cnf 1042 RMD160 47d2542942fb21f4be1e827d47eb4e0468e73910 SHA1 7347bae5a195ad158881fe5313f55ee41e85cb81 SHA256 ed066f7720fd9f4c2d57ffb2ebcbc4b2810d2b7ca22b67ec8c1dc1227baaa635
-DIST ejabberd-2.1.1.tar.gz 2224808 RMD160 d3566425ab18744ad28e520d40766d047d2bad95 SHA1 09cf5a151a7ed5c550939549b8de2c7d9519e4c2 SHA256 cb0aa1f3f2439429ae0eb1b744c975fd5c70c9875be140f9d1714d357b3d96b9
-EBUILD ejabberd-2.1.1.ebuild 5604 RMD160 9f80b2e015afd56e671079b7ea21fee571b0d2bc SHA1 bd0f5e5eee8de2566c59f07fc8796e9fefcaf024 SHA256 6076731813f29df84eb5b842db991c3aaa104b06e5db5659dcdbf6030563f810
+DIST ejabberd-2.1.2.tar.gz 2232307 RMD160 0634422b10d43b0a4ce7826c911a0728bf56ff1c SHA1 e819b023c54a6878093813072b79590282d7d705 SHA256 354d6d1ecc1233b085d049963d5a90843f089b7d3d834809c410dbeb00974335
+EBUILD ejabberd-2.1.2.ebuild 5604 RMD160 9f80b2e015afd56e671079b7ea21fee571b0d2bc SHA1 bd0f5e5eee8de2566c59f07fc8796e9fefcaf024 SHA256 6076731813f29df84eb5b842db991c3aaa104b06e5db5659dcdbf6030563f810
 EBUILD ejabberd-9999.ebuild 5331 RMD160 2a6707025dae0746235fe1f47d1f54ce3d7d806e SHA1 b02b2ac208254d27fa4b62494e033947d74f8668 SHA256 1aef391fa5cd4dc000faa3b5a165663efd669798d5b0fd102fa5494f1cd67a3b
 MISC ChangeLog 14133 RMD160 84289d74a653451d3ea89428cc35327c3d0035c8 SHA1 db19a284662a45b9dfb45a77507ce292c9b9de16 SHA256 798f098523e85780ce6b7f780417ddb0c2389c465edd8da9c1ea744eaf45cf88
 MISC metadata.xml 751 RMD160 a7c4fecee3eac8885e4f1ec0a167234282865cc5 SHA1 91eb50d34d7912e64e1f5a05014efdfe7a892fc1 SHA256 71b810010dd203c4849d36a3dade86907121e5d75e8756817efe35078a7b6c69
