@@ -1,0 +1,4 @@
+AUX spectrum.cfg 2850 RMD160 826e04fd19a7469520a48cf03e1338f3b58633f2 SHA1 0647c99e5ac05b78097974ffbccfdeecec73b3c6 SHA256 7c31e98a4c7784b865ba74a0abe39062f47c0f5d0fdcc08dc13f116c17756c1c
+AUX spectrum.init 831 RMD160 9e13ffa86de9caec556ee0c3ea7f0942211490d8 SHA1 6f6f007213037ba231116873fe86a7742b2dfaf9 SHA256 3742d7e5bf32c7abb2556127dfbbf829976caf137b701a8a3fbf31a49a4e2ae8
+EBUILD spectrum-9999.ebuild 1039 RMD160 0dc57d35595970764f3ec089263371fc5915fe9c SHA1 e1ddb2ce1991a83032ccb6ee7e225f7c02103012 SHA256 98998ed1bb20da6ea9595c977aa01b16df5a04605284f250339d7bd85f0d955d
+MISC metadata.xml 345 RMD160 08be5a1d94c618f914ba47a3a37187ad47f8b874 SHA1 62e8a527557d1607a80907263ff4f3f14b21380f SHA256 992720606c40a0cdf873a1776cea81e967e0578af4b538008ffb4f2b6a2e819c
