@@ -1,0 +1,95 @@
+[service]
+# enable this spectrum instance
+enable = 1
+
+# component ip
+server=127.0.0.1
+
+# if use_proxy is 1, the http_proxy env var will be used as the proxy server
+# for example export http_proxy="http://user:passwd@your.proxy.server:port/"
+use_proxy=0
+
+# component JID
+jid=SPECTRUMGEN2PROTOCOL.server.dom
+
+# component secret
+password=secret
+
+# component port
+port=5347
+
+# admin JIDs - Jabber IDs of transport administrators who have access to admin adhoc commands
+# separated by semicolons
+admins=admin1@server.dom;admin2@server2.rog
+
+# directory where downloaded files will be saved
+filetransfer_cache=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL/filetransfer_cache
+
+# one of: aim, facebook, gg, icq, irc, msn, myspace, qq, simple, xmpp 
+protocol=SPECTRUMGEN2PROTOCOL
+
+# name of transport (this will appear in service discovery)
+name=Spectrum SPECTRUMGEN2PROTOCOL transport
+
+# default language
+language=en
+
+# transport features separated by semicolons
+# combination of: avatars, chatstate, filetransfer
+# if commented, all features will be used
+#transport_features = avatars,chatstate,filetransfer
+
+# if vip_mode is 1, users are divided to 2 groups according to `vip` MySQL table.
+vip_mode=0
+
+# if vip_mode is 1, you can set transport to be availabed only for VIP users by setting only_for_vip to 1.
+# it's something like white-list for transport use
+only_for_vip=0
+
+# if vip_mode is 1 and only_for_vip is 1, users can connect from these servers even they are not VIP.
+# it's list of hostnames separated by semicolons.
+# This feature is useful, if you want to enable transport only for users from your server, but also want to have
+# access for VIP users from another servers (for example from GTalk)
+#allowed_servers=localhost
+
+# transport features separated by semicolons which wille be used for VIP users.
+# combination of: avatars, chatstate, filetransfer
+# if commented, all features will be used
+vip_features = avatars,chatstate,filetransfer
+
+# pid file
+pid_file=/var/run/jabber/spectrum-SPECTRUMGEN2PROTOCOL.pid
+
+[logging]
+# log file, needs to be unique for each spectrum instance
+log_file=/var/log/jabber/spectrum-SPECTRUMGEN2PROTOCOL.log
+
+# log areas
+# combination of: xml, purple
+#log_areas=xml;purple
+
+[database]
+# mysql or sqlite
+type=sqlite
+
+# hostname (for mysql)
+#host=localhost
+
+# username (for mysql)
+#user=user
+
+# password (for mysql)
+#password=password
+# for type=sqlite, set path to database file here
+# for type=mysql it's name of database
+database=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL/spectrum.db
+# table prefix for multiple transport instances sharing the same database
+prefix=SPECTRUMGEN2PROTOCOL_localhost_
+
+[purple]
+# external ips (seperated by semicolons)
+#bind=0.0.0.0
+
+# avatar, vcard, roster storage
+# needs to be unique for each spectrum instance
+userdir=/var/spool/jabber/spectrum-SPECTRUMGEN2PROTOCOL
