@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>net-im</herd>
+<maintainer>
+  <email>rion4ik@gmail.com</email>
+</maintainer>
+  <longdescription>Bunch of XMPP transports (all-in-one) based in libpurple (Pidgin project)</longdescription>
+<use>
+</use>
+</pkgmetadata>
