@@ -1,0 +1,4 @@
+DIST slapi-nis-0.17.tar.gz 458909 RMD160 712fbd8f9b10ba5bbd15f85e06b6dae9497d2a43 SHA1 dacf90ddb39c6d57d317e93b329f42a7ed4fed30 SHA256 cd6d65db8704f7b96151ca21e1e3811466b30f025e23e6287c27ff00ce550b27
+EBUILD slapi-nis-0.17.ebuild 793 RMD160 1c7faad0a0c3639b589d15478f7e43224aead04e SHA1 1725b2826fdb368107e743c52b66bff24c70523f SHA256 595ac7c312b236aefb18b18820dfc137836c0638201dce68adfb3a308fef4255
+MISC ChangeLog 246 RMD160 9fe43d076eed6ea05d8963f9d839355bc992ccf0 SHA1 b7fdc8f8bcde8d74855c9ab93fa4bf2220446ae6 SHA256 69ad6ffe6eb7b10baa343e88eb773b0c9f16de5894971e09a799ff29397e6269
+MISC metadata.xml 978 RMD160 ae33458140fd30155d2cbf1629471c054ce95cc9 SHA1 9ca245f4497a860cd093b289ba352b833e9e7b5b SHA256 036550936798cbeb26975e0479cc811a58bc3602e73e7f002b7bdfac72f7eadf
