@@ -1,0 +1,9 @@
+# ChangeLog for net-nds/slapi-nis
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  01 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> +slapi-nis-0.17.ebuild,
+  +metadata.xml:
+  initial commit
+
+*slapi-nis-0.17
